--- a/css/fes.css
+++ b/css/fes.css
@@ -55,7 +55,7 @@ body {
 
 .nav-right .w-full .ul-1 .ul-2 li {
     padding: 14px 15px 15px;
-    font-size: 15px;
+    font-size: 13px;
 }
 
 .mid-1 {
@@ -135,9 +135,9 @@ ul {
 .ul-1 {
 
     position: absolute;
-    top: 55px;
-    right: 0px;
-    background-color: #e07575;
+    top: 40px;
+    right: -367px;
+    background-color:  #e6e6e6;;
     width: 1230px;
     flex-wrap: wrap;
     height: 455.5px;
@@ -162,7 +162,7 @@ ul {
 .ul-3 {
     width: 1228px;
     height: 38px;
-    background-color: #616161;
+    background-color: #D3D3D3;
 }
 
 li {
@@ -232,11 +232,13 @@ h1 {
     width: 300px;
     height: 300px;
     background-color: #616161;
-    top: 0px;
-    right: 60%;
+    top: 10%;
+    right: 72%;
 
 }
-
+.rectangle{background-color:#0067b8;width: 92px;
+    height: 40px;color: #fff;}
+.pro-8{font-weight: 600;font-size: 1.8125rem;}
 #function .container_1 {
     width: 100%;
     height: 84px;
@@ -264,7 +266,7 @@ h1 {
 
 }
 
-
+.blu{color: #0067b8;box-shadow:0px 1px;color: #0067b8;}
 .icon-1 {
     background-image: url(../../img/icon/gldn-Microsoft-365.jfif);
     width: 40px;
@@ -557,9 +559,9 @@ h1 {
     margin-left: auto;
     margin-right: auto;
 }
-.wrap_business .focus {
+/* .wrap_business .focus {
     background-color: #e07575;
-}
+} */
 
 
 .baseline::before{
@@ -697,7 +699,9 @@ h1 {
     .nav-right ul li:nth-child(2) {
         display: none;
     }
-
+    .nav-right{width: 10%;}
+    .nav-left:{width: 10%;} 
+    .nav-logo{width: 80%;}
     .nav-right i {
         margin-left: 330px;
     }
