--- a/css/fes.css
+++ b/css/fes.css
@@ -61,7 +61,7 @@ input{
     padding: 14px 15px 15px;
     font-size: 13px;
 }
-
+.none-1{display: none;}
 .mid-1 {
     display: flex;
     justify-content: center
@@ -113,7 +113,8 @@ a:hover {
     text-decoration: underline;
 }
 
-
+/* .Delay{transition: transform 10s  transition 0s cubic-bezier(0.32, 0, 0.67, 0);}  */
+.Delay:hover{ margin-left: 5px;  }
 
 ul {
     padding: 0;
@@ -132,10 +133,10 @@ ul {
 
     position: absolute;
     top: 40px;
-    right: -367px;
+    right: -155px;
     background-color: #e6e6e6;
     ;
-    width: 1230px;
+    width: 1099px;
     flex-wrap: wrap;
     height: 455.5px;
     display: flex;
@@ -153,13 +154,13 @@ ul {
     align-items: start;
     justify-content: flex-start;
 }
-
+.bg{background-color: #D3D3D3;}
 .ul-3 {
     /* width: 1228px;
     height: 38px; */
     /* background-color: #D3D3D3; */
 }
-
+.w-full ul span{background-color: #D3D3D3;}
 li {
 
     list-style: none;
@@ -187,7 +188,7 @@ li {
 
 .box-1 {
     width: 300px;
-    height: 300px;
+    height: 220px;
     display: none;
 }
 
@@ -228,7 +229,7 @@ h1 {
     height: 300px;
     background-color: #616161;
     top: 16%;
-    right: 72%;
+    right: 64%;
 
 }
 
@@ -633,6 +634,7 @@ a {
     .bold {
         font-size: 1.5rem;
     }
+    .lg-col{position: static;}
 }
 
 
@@ -662,7 +664,7 @@ a {
     .w-full .search{flex: auto;}
     .bg-white{width: 100%;}
     .nav-wrap{width: 100%;}
-    .w-full span{display: none;}
+    .w-full .span-1{display: none;}
     .nav-right ul li{position: static;}
     .nav-right .ul-1{width: 100%;right: 0px;height: auto;}
     .nav-right .ul-2{width: 100%;}
@@ -672,6 +674,18 @@ a {
     }
     .nav-right #burger-1:checked+.ul-3 {display: block;}
     .nav-right .w-full li:hover::before{display: none;}
+    .nav-right #burger-2:checked+.ul-3{display: block;}
+    
+    .nav-right .w-full #burger-3:checked+.ul-3{display: block;}
+    
+    .nav-right #burger-4:checked+.ul-3{display: block;}
+    
+    .nav-right #burger-5:checked+.ul-3{display: block;}
+    
+    .nav-right #burger-6:checked+.ul-3{display: block;}
+    .none-1{display: block;}
+
+    /* .nav-right  .ul-2 #burger-2.ul-4{display: block;} */
     /* .nav-left {
         width: 50%;
     } */
